# kikaiken-bot

./: .gitignore  .pdm-python  README.md  bot.py  pyproject.toml  test.py
kikaiken/core/: api.py  connect.py  data_manager.py  db_connect.py  key_manager.py  llm.py  talk.py  text.py
kikaiken/core/models/: message_model.py
plugins/plugin-kikaiken-talk/: __init__.py  config.py
